# farmacia-assistant

./: .editorconfig  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/application/: __init__.py
backend/app/application/dto/: __init__.py
backend/app/application/ports/: __init__.py  case_repository.py  case_structure_extractor.py  medication_repository.py  password_hasher.py  token_service.py  user_repository.py
backend/app/application/use_cases/: __init__.py  analyze_case.py  login.py  recommendations.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  clinical_hypothesis.py  medication.py  structured_case.py  symptom.py  user.py
backend/app/domain/repositories/: __init__.py
backend/app/domain/services/: __init__.py  recommendation_rules.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/config/: __init__.py  settings.py
backend/app/infrastructure/db/: __init__.py
backend/app/infrastructure/llm/: __init__.py  factory.py  mock_case_structure_extractor.py  openai_case_structure_extractor.py
backend/app/infrastructure/persistence/: __init__.py  factory.py  init_db.py
backend/app/infrastructure/security/: __init__.py  jwt_token_service.py  password.py  (+1 more)
backend/app/interfaces/: __init__.py
backend/tests/: conftest.py
backend/tests/integration/: test_analyze_case_api.py  test_auth_api.py  test_health.py  test_recommendations_api.py
backend/tests/unit/: test_seed_user.py
(+99 files in other folders)
